@@ -1,3 +1,8 @@
+2009-01-24  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.SourceEditor/ClassQuickFinder.cs: Type & member list is
+	now sorted.
+
 2009-01-23  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.SourceEditor/SourceEditorWidget.cs:
